<resources>
    <string name="app_name">DonnaFlor</string>
    <string name="tituloLogin">Restaurante Doña Flor </string>
    <string name="usuario">Usuario </string>
    <string name="contrasena">Contraseña </string>
    <string name="Ingresar">Ingresar </string>
    <string name="bebidas">Bebidas</string>
    <string name="platos">Platos </string>
    <string name="agregarPro">Agregar Productos </string>
    <string name="nombre_producto">Nombre del Producto</string>
    <string name="precio_producto">Precio del Producto</string>
    <string name="tipo_producto">Tipo del Producto </string>
    <string name="estado_producto">Estado del Producto </string>
    <string name="guardar_producto">Guardar Producto</string>
    <string name="regresar">Regresar</string>
    <string name="agregarProductos">Agregar Productos</string>
    <string name="Consultas">Consultar Productos</string>


    <string-array name="tipos_producto">
        <item>Platos</item>
        <item>Bebidas</item>
    </string-array>

    <string-array name="estados_producto">
        <item>Inactivo</item>
        <item>Activo</item>
    </string-array>
</resources>