<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregarPro"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp" />

    <EditText
        android:id="@+id/txtNombreProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_producto"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <EditText
        android:id="@+id/txtPrecioProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/precio_producto"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <Spinner
        android:id="@+id/spnTipoProdu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tipo_producto"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <Spinner
        android:id="@+id/spnEstadoProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estado_producto"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btnGuardarProd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar_producto"
            android:layout_margin="5dp"
            android:backgroundTint="@color/azul"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnRegresarProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/azul"
            android:text="@string/regresar"
            android:textColor="@color/black" />

    </LinearLayout>
    <ListView
        android:id="@+id/lvListaProductos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnRegresarProducto"
        android:layout_marginTop="16dp"
        android:divider="@android:color/black"
        android:dividerHeight="1dp" />

</LinearLayout>
